--- a/src/views/pages/Home/Home.css
+++ b/src/views/pages/Home/Home.css
@@ -3,33 +3,10 @@
   padding-bottom: 100px;
 }
 /* contactkomerce */
-.contactkomercemobile {
-  display: none;
-}
 .contactkomerce {
   margin-bottom: 140.36px;
   height: 275.15px;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-}
-.contactkomerce__left {
-  position: relative;
-  height: 100%;
-  background: #FBA63C;
-}
-.contactkomerce__left--text {
-  position: absolute;
-  width: 282px;
-  height: 72px;
-  right: 112px;
-  top: 57.07px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 150%;
-  letter-spacing: 0.5px;
-  color: #FFFFFF;
-  z-index: 1;
 }
 .contactkomerce__left--img {
   position: absolute;
@@ -38,45 +15,25 @@
   left: 0px;
   bottom: 0px;
 }
-.contactkomerce__left--link {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  position: absolute;
-  width: 189px;
-  height: 56px;
-  right: 205px;
-  top: 163.07px;
-  background: #1FCB32;
-  border-radius: 8px;
-}
-.contactkomerce__left--link--text {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 150%;
-  text-align: center;
-  letter-spacing: 0.5px;
-  color: #FFFFFF;
-}
-.contactkomerce__left--link-img {
-  width: 28px;
-  height: 28px;
-}
 .contactkomerce__right {
   position: relative;
   height: 100%;
   background: #FCEBBE;
 }
+.contactkomerce__right--content {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  height: 100%;
+  width: 100%;
+}
 .contactkomerce__right--text {
-  position: absolute;
-  width: 352px;
-  height: 72px;
-  left: 82px;
-  top: 56.64px;
+  margin: 0px auto 1em;
+  text-align: center;
+  max-width: calc(60vw);
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: calc(2vw*1.4);
   line-height: 150%;
   letter-spacing: 0.5px;
   color: #222222;
@@ -94,14 +51,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 12px 24px;
-  position: absolute;
   width: 189px;
   height: 56px;
-  left: 82px;
-  top: 162.64px;
   background: #FF6A3A;
   border-radius: 8px;
+  margin: 0px auto;
 }
 .contactkomerce__right--link-text {
   font-style: normal;
@@ -291,7 +245,7 @@ ol.carousel__pagination {
 .service .content {
   border: none;
   border-radius: 10px;
-  min-height: 250px;
+  min-height: 275px;
   margin-bottom: 1.8vw;
 }
 .service .title-content {
@@ -470,6 +424,29 @@ ol.carousel__pagination {
   letter-spacing: 0.5px;
   color: #828282;
 }
+.alur__contentwrap {}
+.alur__content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: -2px;
+}
+.alur__content--icon {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #FF6A3A;
+  margin-right: 8px;
+}
+.alur__content--text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: justify;
+  letter-spacing: 0.5px;
+  color: #828282;
+  margin-bottom: 0px;
+}
 @media only screen and (max-width: 1260px) {
   .conclusion__bggambar {
     left: 0px;
@@ -529,32 +506,10 @@ ol.carousel__pagination {
   }
 }
 @media only screen and (max-width: 991px) {
-  .contactkomercemobile{
-    display: grid;
-    margin-bottom: 60px;
-    height: unset;
-    min-height: 500px;
-    grid-template-columns: 1fr;
-  }
-  .contactkomerce {
-    display: none;
-  }
-  .contactkomerce__left {
-    display: grid;
-    justify-content: end;
-    align-content: center;
-  }
   .contactkomerce__right {
     display: grid;
     justify-content: center;
     align-content: center;
-  }
-  .contactkomerce__left--text {
-    position: unset;
-  }
-  .contactkomerce__left--link {
-    z-index: 1;
-    position: unset;
   }
   .contactkomerce__right--text {
     position: unset;
@@ -626,6 +581,28 @@ ol.carousel__pagination {
     right: 228px;
     bottom: 40px;
   }
+  .contactkomerce {
+    height: 178px;
+  }
+  .contactkomerce__right--img {
+    width: 122px;
+    height: 142px;
+  }
+  .contactkomerce__left--img {
+    width: 108px;
+    height: 152px;
+  }
+  .contactkomerce__right--link {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: calc(27vw);
+    height: calc(7vw);
+    background: #FF6A3A;
+    border-radius: 8px;
+    margin: 0px auto;
+  }
 }
 @media only screen and (max-width: 540px) {
   .register-now .btn-register-now {
@@ -669,40 +646,23 @@ ol.carousel__pagination {
     font-size: 12px;
     width: 85%;
   }
-  .contactkomerce__right {
-    justify-content: start;
-  }
-  .contactkomerce__left {
-    justify-content: end;
-  }
-  .contactkomerce__left--text {
-    font-weight: 600;
-    width: 220px;
-    height: unset;
-    font-size: 16px;
-    margin-bottom: 20px;
-    line-height: 150%
-  }
-  .contactkomerce__left--link {
-    width: 149px;
-    height: 46px;
-  }
-  .contactkomerce__left--link-img {
-    width: 22px;
-    height: 22px;
-  }
   .contactkomerce__right--text {
     font-size: 16px;
-    width: 278px;
     height: unset;
     margin-bottom: 12px;
-    transform: translateX(20px);
+  }
+  .contactkomerce__right--img {
+    width: 102px;
+    height: 122px;
+  }
+  .contactkomerce__left--img {
+    width: 88px;
+    height: 132px;
   }
   .contactkomerce__right--link {
     padding: 12px 16px;
     width: 156px;
     height: 45px;
-    transform: translateX(20px);
   }
   .contactkomerce__right--link-text {
     font-weight: 600;
