--- a/src/views/pages/Home/Home.css
+++ b/src/views/pages/Home/Home.css
@@ -350,7 +350,7 @@ ol.carousel__pagination {
 .conclusion__text {
   position: absolute;
   width: 591px;
-  right: 400px;
+  right: 340px;
   top: 69px;
   font-weight: 600;
   font-size: 24px;
@@ -369,7 +369,7 @@ ol.carousel__pagination {
 }
 .conclusion__wrapperlogo {
   position: absolute;
-  right: 122px;
+  right: 70px;
   top: 58px;
   display: grid;
 }
@@ -390,6 +390,7 @@ ol.carousel__pagination {
 }
 .conclusion__wrapperotheimg {
   display: flex;
+  margin-left: -20px;
 }
 .conclusion__logoidx {
   width: 102px;
