--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,900');
 *
