--- a/src/views/pages/Home/Home.css
+++ b/src/views/pages/Home/Home.css
@@ -314,6 +314,9 @@ h3 {
 .feature h3 {
     padding: 15px 0;
 }
+.feature .fitur {
+    text-align: center;
+}
 
 .feature .content {
     width: 70%;
@@ -853,7 +856,8 @@ h3 {
 
 .faq .accordion-body {
     padding-top: 0 !important;
-    font-size: 16px !important;
-    line-height: 24px !important;
+    font-size: 14px !important;
+    line-height: 21px !important;
     margin-right: 18%;
+    font-family: 'Poppins';
 }
