--- a/src/views/pages/Home/Home.css
+++ b/src/views/pages/Home/Home.css
@@ -316,6 +316,7 @@ h3 {
 .feature h3 {
     padding: 15px 0;
 }
+
 .feature .fitur {
     text-align: center;
 }
@@ -343,8 +344,65 @@ h3 {
     position: absolute;
     top: 40px;
     width: 480px;
+    margin-top: -5rem;
     height: auto;
     right: 0;
+}
+
+.btn-feature {
+    padding: 8px;
+    border: solid 1px #C2C2C2;
+    color: #C2C2C2;
+    font-weight: 500;
+    border-radius: 8px;
+}
+
+.btn-feature:focus {
+    border: solid 1px #F95031;
+    color: #F95031;
+}
+
+.subhead-feature {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+#arrow-btn:hover .arrow-feature {
+    display: block;
+    background-image: url(../../../assets/img/icons/arrow-right-orange.svg);
+}
+
+.acc-feature:hover {
+    color: #F95031;
+}
+
+#arrow-btn:focus .arrow-feature {
+    display: block;
+    background-image: url(../../../assets/img/icons/arrow-right-orange.svg);
+}
+
+.acc-feature {
+    border: none;
+    background-color: #F6F6F9;
+}
+
+.acc-feature:focus {
+    color: #F95031;
+}
+
+.arrow-feature {
+    width: 3rem;
+    height: 2rem;
+    background-image: url(../../../assets/img/icons/arrow-right-black.svg);
+    background-repeat: no-repeat;
+}
+
+.image-feature-unggulan {
+    text-align: -webkit-right;
+}
+
+.image-feature-unggulan img {
+    max-width: 100%;
 }
 
 .conclusion {
@@ -486,9 +544,11 @@ h3 {
 .testimoni .content-mobile {
     display: none;
 }
+
 #feature-mobile {
     display: none;
 }
+
 #conclusion-mobile {
     display: none;
 }
@@ -497,39 +557,49 @@ h3 {
     .register-now .description {
         font-size: 16px;
     }
+
     .register-now .image-desktop {
         margin: auto 0;
     }
+
     .register-now .btn-register-now {
         font-weight: 700;
         font-size: 14px;
         min-width: 160px;
         height: 50px;
     }
+
     /* .service .description {
     font-size: 14px;
   } */
     .service .content {
         min-height: 255px;
     }
+
     .recommend .card .content {
         min-height: 140px;
     }
+
     .image-feature {
         width: 420px;
     }
+
     .benefit .content {
         margin-bottom: 20px;
     }
+
     .flow .description span {
         margin-left: 15%;
     }
+
     .flow .image {
         justify-content: end;
     }
+
     #feature-mobile {
         display: none;
     }
+
     #conclusion-mobile {
         display: none;
     }
@@ -540,58 +610,73 @@ h3 {
         font-size: 32px;
         font-weight: 600;
     }
+
     h3 {
         font-size: 28px;
         font-weight: 600;
     }
+
     .register-now .title {
         margin-top: 15px;
     }
+
     .register-now .info .number {
         font-size: 34px;
         /* font-weight: 600;
     color: #FE783A; */
     }
+
     .register-now .info .label {
         font-size: 14px;
         margin-left: 10px;
     }
+
     .register-now .description {
         font-size: 14px;
         width: 100%;
     }
+
     .service .content {
         min-height: 230px;
     }
+
     .image-feature {
         display: none;
     }
+
     .service .title {
         margin-top: 4vh;
     }
+
     .benefit-head {
         margin-left: 30px;
         margin-right: 30px;
     }
+
     .testimoni .card .content {
         padding: 30px;
         font-size: 14px;
     }
+
     .testimoni .card {
         min-height: 250px;
         margin: 20px 0;
     }
+
     .conclusion .bg-model-left {
         margin-top: 0;
         width: 150px;
     }
+
     .conclusion .bg-model-right {
         margin-top: 0;
         width: 200px;
     }
+
     #feature-mobile {
         display: none;
     }
+
     #conclusion-mobile {
         display: none;
     }
@@ -601,38 +686,49 @@ h3 {
     #feature-mobile {
         display: none;
     }
+
     h2 {
         font-size: 28px;
     }
+
     h3 {
         font-size: 26px;
     }
+
     .register-now .title {
         text-align: center;
     }
+
     .register-now .description {
         text-align: center;
     }
+
     .register-now .info {
         justify-content: center;
     }
+
     .register-now .btn-register-now {
         display: block;
         margin: 0 auto;
     }
+
     .register-now .image-desktop {
         margin-top: 20px;
     }
+
     .service-desktop {
         display: none;
     }
+
     .service-mobile {
         display: unset;
     }
+
     .service-mobile .carousel {
         background: linear-gradient(90deg, #FF6A3A -20.91%, #FBA63C 85.49%);
         border-radius: 10px;
     }
+
     .service-mobile .carousel .card {
         margin: 50px 20px;
         width: 100%;
@@ -641,47 +737,58 @@ h3 {
         border-radius: 10px;
         padding: 0 10px;
     }
+
     .service-mobile .carousel .card .description {
         margin-top: 10px;
     }
+
     .service-mobile .carousel__prev,
     .service-mobile .carousel__next {
         background-color: transparent;
     }
+
     .service-mobile .carousel__prev {
         position: absolute;
         left: 45%;
         top: 92%;
     }
+
     .service-mobile .carousel__next {
         position: absolute;
         right: 45%;
         top: 92%;
     }
+
     .service .title {
         justify-content: start;
         margin: 10px 0;
     }
+
     .recommend .card .image {
         margin: 0 auto;
     }
+
     .recommend .card .content {
         max-width: 350px;
         margin: 0 auto;
     }
+
     .benefit-head {
         margin: 0;
         margin-top: 10px;
     }
+
     .benefit-table-desktop {
         display: none;
     }
+
     .benefit-table-mobile {
         display: unset;
         text-align: center;
         vertical-align: middle;
         font-weight: 500;
     }
+
     .benefit-table-mobile .row {
         border-radius: 12px;
         background-color: #ffffff;
@@ -689,92 +796,115 @@ h3 {
         margin-bottom: 10px;
         overflow-x: hidden;
     }
+
     .benefit-table-mobile .head {
         background-color: #FBA63C;
     }
+
     .benefit-table-mobile .subhead {
         background-color: #FF6A3A;
     }
+
     .testimoni .content-desktop {
         display: none;
     }
+
     .testimoni .content-mobile {
         display: unset;
     }
+
     .testimoni .content-mobile .carousel__prev,
     .testimoni .content-mobile .carousel__next {
         border-radius: 15px;
     }
+
     .testimoni .content-mobile .carousel__prev {
         position: absolute;
         left: 40%;
         top: 110%;
     }
+
     .testimoni .content-mobile .carousel__next {
         position: absolute;
         right: 40%;
         top: 110%;
     }
+
     .testimoni .card .content {
         font-size: 12px;
     }
+
     .testimoni .card .name {
         font-size: 16px;
         margin-right: 0;
         margin-left: 20px;
     }
+
     .conclusion .bg-model-left {
         width: 100px;
     }
+
     .conclusion .bg-model-right {
         width: 150px;
     }
+
     .conclusion .content .btn {
         font-size: 14px;
         padding: 12px 18px;
     }
+
     #conclusion-mobile {
         display: none;
     }
-    
+
 }
 
 @media (max-width: 575.98px) {
     .feature {
         display: none;
     }
+
     #feature-mobile {
         display: block;
     }
+
     .head-feature {
         padding-top: 40px;
     }
+
     .subhead-feature {
         font-family: 'Poppins';
         font-weight: 600;
         font-size: 18px;
         color: #F95031;
     }
+
     .subhead-feature-mobile {
         align-self: center;
     }
+
     .content-feature {
         font-family: 'Poppins';
         font-weight: 400;
         font-size: 14px;
     }
+
     h2 {
         font-size: 26px;
     }
+
     h3 {
         font-size: 24px;
     }
+
     .flow .content-desktop {
         display: none;
     }
+
     .flow .content-mobile {
         display: unset;
     }
+
     .flow .content-mobile .number-mobile {
         width: 34px;
         height: 34px;
@@ -783,17 +913,21 @@ h3 {
         border-radius: 50%;
         padding-top: 1%;
     }
+
     .flow .content-mobile .number-mobile span {
         font-size: 18px;
         color: #FF6A3A;
         margin: 10px;
     }
+
     .flow .content-mobile .image-mobile {
         width: 50%;
     }
+
     .flow .content-mobile .image-mobile img {
         width: 90%;
     }
+
     .flow .content-mobile .description-mobile {
         font-size: 16px;
         font-weight: 600;
@@ -801,52 +935,63 @@ h3 {
         color: #FF6A3A;
         width: 50%;
         display: flex;
-        align-items: center!important;
+        align-items: center !important;
     }
+
     .conclusion h3 {
         font-weight: 500;
         font-size: 20px;
         margin-bottom: 0;
     }
+
     .conclusion .content {
         padding: 15px;
     }
+
     .conclusion .bg-model-left {
         width: 80px;
     }
+
     .conclusion .bg-model-right {
         width: 110px;
     }
+
     .conclusion .content .btn {
         font-size: 14px;
         padding: 8px 14px;
     }
+
     .register-now .info {
         border-top: solid 2px #E2E2E2;
     }
+
     #conclusion-mobile {
         background-color: #FCEBBE;
         display: block;
         height: 180px;
         text-align: -webkit-center;
     }
+
     .conclusion-mobile-left {
         background-image: url("@/assets/img/hero/model-conclusion-mobile-left.png");
         background-repeat: no-repeat;
         background-position: bottom left;
         height: 180px;
     }
+
     .conclusion-mobile-right {
         background-image: url("@/assets/img/hero/model-conclusion-mobile-right.png");
         background-repeat: no-repeat;
         background-position: bottom right;
     }
+
     #conclusion-mobile .content-mobile {
         padding-top: 40px;
         width: 60%;
         text-align: -webkit-center;
         font-size: 16px;
     }
+
     .conclusion {
         display: none;
     }
@@ -856,22 +1001,28 @@ h3 {
     h2 {
         font-size: 22px;
     }
+
     h3 {
         font-size: 20px;
     }
+
     .feature .title-content {
         font-size: 26px;
     }
+
     .service-mobile .carousel .card {
         min-height: 250px;
     }
+
     .conclusion h3 {
         font-size: 18px;
     }
+
     .conclusion .content .btn {
         font-size: 12px;
         padding: 10px 16px;
     }
+
     .benefit .logo {
         width: 70px;
     }
@@ -937,6 +1088,12 @@ h3 {
     margin-right: 18%;
     font-family: 'Poppins';
 }
+
 .faq .FAQ-button {
     text-align: -webkit-right;
+}
+
+.faq .accordion-button:not(.collapsed) {
+    background-color: transparent;
+    box-shadow: unset;
 }
